@@ -18,6 +18,10 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 
 @Lazy
 @Component
@@ -31,12 +35,12 @@ public class RelatorioView extends JFrame {
     private JComboBox<FiltroTipo> comboFiltro;
     private JButton btnVisualizar;
     private JButton btnExportarPDF;
-    private JButton btnExportarCSV;
-    private JButton btnAtualizar;
     private JButton btnExcluir;
+    private JButton btnAtualizar;
     private JButton btnGerarNovo;
-    
-    private List<Relatorio> relatoriosCarregados = new ArrayList<>();
+    private boolean loading = false;
+
+    private final List<Relatorio> relatoriosCarregados = new ArrayList<>();
     
     private enum FiltroTipo {
         TODOS("Todos"),
@@ -65,7 +69,10 @@ public class RelatorioView extends JFrame {
         setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);
         setLocationRelativeTo(null);
         initComponents();
-        carregarRelatorios();
+        addWindowListener(new WindowAdapter() {
+            @Override public void windowOpened(WindowEvent e) { carregarRelatorios(); }
+            @Override public void windowActivated(WindowEvent e) { carregarRelatorios(); }
+        });
     }
     
     private void initComponents() {
@@ -78,11 +85,12 @@ public class RelatorioView extends JFrame {
         comboFiltro = new JComboBox<>(FiltroTipo.values());
         comboFiltro.addActionListener(e -> filtrarRelatorios());
         painelSuperior.add(comboFiltro);
-        
-        btnAtualizar = new JButton("Atualizar");
+
+        btnAtualizar = new JButton("Recarregar (F5)");
+        btnAtualizar.setToolTipText("Recarregar lista de relatórios do banco (F5)");
         btnAtualizar.addActionListener(e -> carregarRelatorios());
         painelSuperior.add(btnAtualizar);
-        
+
         btnGerarNovo = new JButton("Gerar Novo Relatório");
         btnGerarNovo.addActionListener(e -> abrirDialogoGerarRelatorio());
         painelSuperior.add(btnGerarNovo);
@@ -112,6 +120,14 @@ public class RelatorioView extends JFrame {
         
         JPanel painelInferior = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 10));
         painelInferior.setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
+
+        JButton btnVoltar = new JButton("Voltar");
+        btnVoltar.setToolTipText("Fechar esta janela e retornar ao menu");
+        btnVoltar.addActionListener(e -> {
+            if (loading) return;
+            dispose();
+        });
+        painelInferior.add(btnVoltar);
         
         btnVisualizar = new JButton("Visualizar");
         btnVisualizar.addActionListener(e -> visualizarRelatorio());
@@ -120,11 +136,15 @@ public class RelatorioView extends JFrame {
         btnExportarPDF = new JButton("Exportar PDF Selecionado");
         btnExportarPDF.addActionListener(e -> exportarPDF());
         painelInferior.add(btnExportarPDF);
-        
-        btnExportarCSV = new JButton("Exportar CSV (Avaliações)");
+
+        JButton btnExportarCSV = new JButton("Exportar CSV (Avaliações)");
         btnExportarCSV.addActionListener(e -> exportarCSV());
         painelInferior.add(btnExportarCSV);
-        
+
+        JButton btnExportarPDFGraficos = new JButton("Exportar PDF com Gráficos");
+        btnExportarPDFGraficos.addActionListener(e -> exportarPDFComGraficos());
+        painelInferior.add(btnExportarPDFGraficos);
+
         btnExcluir = new JButton("Excluir Selecionado");
         btnExcluir.addActionListener(e -> excluirRelatorio());
         btnExcluir.setForeground(Color.RED);
@@ -134,33 +154,55 @@ public class RelatorioView extends JFrame {
         
         tabelaRelatorios.getSelectionModel().addListSelectionListener(e -> {
             boolean temSelecao = tabelaRelatorios.getSelectedRow() != -1;
-            btnVisualizar.setEnabled(temSelecao);
-            btnExportarPDF.setEnabled(temSelecao);
-            btnExcluir.setEnabled(temSelecao);
+            boolean enable = temSelecao && !loading;
+            btnVisualizar.setEnabled(enable);
+            btnExportarPDF.setEnabled(enable);
+            btnExcluir.setEnabled(enable);
+        });
+
+        getRootPane().getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW)
+                .put(KeyStroke.getKeyStroke("F5"), "reload");
+        getRootPane().getActionMap().put("reload", new AbstractAction() {
+            @Override public void actionPerformed(ActionEvent e) { carregarRelatorios(); }
         });
         
         btnVisualizar.setEnabled(false);
         btnExportarPDF.setEnabled(false);
         btnExcluir.setEnabled(false);
     }
+
+    public void exibir() {
+        carregarRelatorios();
+        SwingUtilities.invokeLater(() -> setVisible(true));
+    }
+
+    private void setLoading(boolean value) {
+        loading = value;
+        setCursor(value ? Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR) : Cursor.getDefaultCursor());
+        comboFiltro.setEnabled(!value);
+        btnAtualizar.setEnabled(!value);
+        btnGerarNovo.setEnabled(!value);
+        tabelaRelatorios.setEnabled(!value);
+    }
     
     private void carregarRelatorios() {
         try {
+            setLoading(true);
             relatoriosCarregados.clear();
             modeloTabela.setRowCount(0);
             
-            java.awt.event.ActionListener[] listeners = comboFiltro.getActionListeners();
-            for (java.awt.event.ActionListener listener : listeners) {
+            ActionListener[] listeners = comboFiltro.getActionListeners();
+            for (ActionListener listener : listeners) {
                 comboFiltro.removeActionListener(listener);
             }
             
             comboFiltro.setSelectedItem(FiltroTipo.TODOS);
             
-            for (java.awt.event.ActionListener listener : listeners) {
+            for (ActionListener listener : listeners) {
                 comboFiltro.addActionListener(listener);
             }
             
-            Iterable<Relatorio> relatorios = relatorioService.pegarTodosRelatorios();
+            List<Relatorio> relatorios = relatorioService.pegarTodosRelatorios();
             
             for (Relatorio rel : relatorios) {
                 relatoriosCarregados.add(rel);
@@ -172,11 +214,14 @@ public class RelatorioView extends JFrame {
                 "Erro ao carregar relatórios: " + ex.getMessage(),
                 "Erro",
                 JOptionPane.ERROR_MESSAGE);
+        } finally {
+            setLoading(false);
         }
     }
     
     private void filtrarRelatorios() {
         try {
+            setLoading(true);
             relatoriosCarregados.clear();
             modeloTabela.setRowCount(0);
             
@@ -184,23 +229,14 @@ public class RelatorioView extends JFrame {
             List<Relatorio> relatorios;
             
             if (filtro == null || filtro == FiltroTipo.TODOS) {
-                relatorios = new ArrayList<>();
-                relatorioService.pegarTodosRelatorios().forEach(relatorios::add);
+                relatorios = relatorioService.pegarTodosRelatorios();
             } else {
-                switch (filtro) {
-                    case CURSO:
-                        relatorios = relatorioService.filtrarRelatoriosPorCurso();
-                        break;
-                    case INSTRUTOR:
-                        relatorios = relatorioService.filtrarRelatoriosPorInstrutor();
-                        break;
-                    case ALUNO:
-                        relatorios = relatorioService.filtrarRelatoriosPorAluno();
-                        break;
-                    default:
-                        relatorios = new ArrayList<>();
-                        relatorioService.pegarTodosRelatorios().forEach(relatorios::add);
-                }
+                relatorios = switch (filtro) {
+                    case CURSO -> relatorioService.filtrarRelatoriosPorCurso();
+                    case INSTRUTOR -> relatorioService.filtrarRelatoriosPorInstrutor();
+                    case ALUNO -> relatorioService.filtrarRelatoriosPorAluno();
+                    default -> relatorioService.pegarTodosRelatorios();
+                };
             }
             
             for (Relatorio rel : relatorios) {
@@ -213,6 +249,8 @@ public class RelatorioView extends JFrame {
                 "Erro ao filtrar relatórios: " + ex.getMessage(),
                 "Erro",
                 JOptionPane.ERROR_MESSAGE);
+        } finally {
+            setLoading(false);
         }
     }
     
@@ -284,7 +322,6 @@ public class RelatorioView extends JFrame {
                 "Erro ao visualizar relatório: " + ex.getMessage(),
                 "Erro",
                 JOptionPane.ERROR_MESSAGE);
-            ex.printStackTrace();
         }
     }
     
@@ -331,7 +368,49 @@ public class RelatorioView extends JFrame {
                 JOptionPane.ERROR_MESSAGE);
         }
     }
-    
+
+        private void exportarPDFComGraficos() {
+        try {
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
+            String dataAtual = LocalDate.now().format(formatter);
+            String nomeArquivo = "relatorio_geral_graficos_" + dataAtual + ".pdf";
+
+            JFileChooser fileChooser = new JFileChooser();
+            fileChooser.setDialogTitle("Salvar PDF com Gráficos");
+            fileChooser.setFileFilter(new FileNameExtensionFilter("PDF files", "pdf"));
+            fileChooser.setSelectedFile(new File(nomeArquivo));
+
+            int result = fileChooser.showSaveDialog(this);
+            if (result == JFileChooser.APPROVE_OPTION) {
+                File arquivo = fileChooser.getSelectedFile();
+
+                if (!arquivo.getName().toLowerCase().endsWith(".pdf")) {
+                    arquivo = new File(arquivo.getAbsolutePath() + ".pdf");
+                }
+                
+                int incluirSatisfacao = JOptionPane.showConfirmDialog(this,
+                    "Deseja incluir o gráfico de satisfação (sentimento) no PDF?",
+                    "Opções de Exportação",
+                    JOptionPane.YES_NO_OPTION);
+                
+                boolean incluir = incluirSatisfacao == JOptionPane.YES_OPTION;
+
+                relatorioService.exportarPdfComGraficos(arquivo, incluir);
+
+                JOptionPane.showMessageDialog(this,
+                    "PDF com gráficos exportado com sucesso!",
+                    "Sucesso",
+                    JOptionPane.INFORMATION_MESSAGE);
+            }
+
+        } catch (Exception ex) {
+            JOptionPane.showMessageDialog(this,
+                "Erro ao exportar PDF com gráficos: " + ex.getMessage(),
+                "Erro",
+                JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
     private void exportarCSV() {
         try {
             DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
@@ -457,7 +536,8 @@ public class RelatorioView extends JFrame {
     }
     
     private void gerarRelatorioComparativoCurso() {
-        List<Curso> cursos = cursoService.listarCursos();
+        // Usa lista única ordenada para evitar duplicidades na escolha
+        List<Curso> cursos = cursoService.listarCursosUnicosOrdenados();
         
         if (cursos.isEmpty()) {
             JOptionPane.showMessageDialog(this, "Não há cursos cadastrados.", "Aviso", JOptionPane.WARNING_MESSAGE);
@@ -471,7 +551,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             cursos.toArray(),
-            cursos.get(0)
+            cursos.getFirst()
         );
         
         if (cursoSelecionado != null) {
@@ -500,7 +580,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             instrutores.toArray(),
-            instrutores.get(0)
+            instrutores.getFirst()
         );
         
         if (instrutorSelecionado != null) {
@@ -529,7 +609,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             alunos.toArray(),
-            alunos.get(0)
+            alunos.getFirst()
         );
         
         if (alunoSelecionado != null) {
@@ -544,7 +624,7 @@ public class RelatorioView extends JFrame {
     }
     
     private void gerarRelatorioAlunosCurso() {
-        List<Curso> cursos = cursoService.listarCursos();
+        List<Curso> cursos = cursoService.listarCursosUnicosOrdenados();
         
         if (cursos.isEmpty()) {
             JOptionPane.showMessageDialog(this, "Não há cursos cadastrados.", "Aviso", JOptionPane.WARNING_MESSAGE);
@@ -558,7 +638,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             cursos.toArray(),
-            cursos.get(0)
+            cursos.getFirst()
         );
         
         if (cursoSelecionado != null) {
@@ -573,7 +653,7 @@ public class RelatorioView extends JFrame {
     }
     
     private void gerarRelatorioCursoDetalhado() {
-        List<Curso> cursos = cursoService.listarCursos();
+        List<Curso> cursos = cursoService.listarCursosUnicosOrdenados();
         
         if (cursos.isEmpty()) {
             JOptionPane.showMessageDialog(this, "Não há cursos cadastrados.", "Aviso", JOptionPane.WARNING_MESSAGE);
@@ -587,7 +667,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             cursos.toArray(),
-            cursos.get(0)
+            cursos.getFirst()
         );
         
         if (cursoSelecionado != null) {
@@ -616,7 +696,7 @@ public class RelatorioView extends JFrame {
             JOptionPane.QUESTION_MESSAGE,
             null,
             instrutores.toArray(),
-            instrutores.get(0)
+            instrutores.getFirst()
         );
         
         if (instrutorSelecionado != null) {
